--- a/README
+++ b/README
@@ -36,3 +36,9 @@ users will have to edit the source code in order to adapt the program to
 their environment.
 Site-specifics have been marked with 
 pragma Compile_time_Warning ("hardcoded config")
+
+
+
+#######
+TODO: call function
+
